<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="174dp"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/device_list_l1"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:contentDescription="@null"
        android:gravity="bottom"
        android:scaleType="fitXY"
        android:src="@drawable/zz_maincell" />


    <TextView
        android:id="@+id/device_list_id"
        style="@style/Base.TextAppearance.AppCompat.Small"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_alignTop="@+id/device_list_onlinenum"
        android:layout_toStartOf="@+id/device_list_onlinenum"
        android:gravity="bottom|right"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:text="@string/dervice_list_info2"
        android:textColor="@color/activity_rooter_bar_title_bg"
        android:textSize="10sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/device_list_name"
        android:layout_width="180dp"
        android:layout_height="28dp"
        android:layout_alignBottom="@+id/device_list_l1"
        android:layout_alignParentStart="true"
        android:gravity="center|left"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:text="@string/dervice_list_info1"
        android:textColor="@android:color/holo_red_light"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView_device_online"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/device_list_l1"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:src="@drawable/zz_online" />

    <TextView
        android:id="@+id/device_list_onlinenum"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_alignBottom="@+id/device_list_l1"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:gravity="bottom|right"
        android:padding="2dp"
        android:singleLine="true"
        android:text="@string/dervice_list_info3"
        android:textColor="@color/activity_rooter_bar_title_bg"
        android:textSize="10sp"
        android:visibility="gone"/>

</RelativeLayout>