<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.warningsys.platform.AboutActivity"
    tools:showIn="@layout/activity_about">

    <ImageView
        android:id="@+id/btnLogo"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:scaleType="center"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnLogo" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="match_parent"
            android:layout_height="20dp" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout1"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="0dp">

        <ImageView
            android:id="@+id/help1"
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:src="@drawable/zz_w4"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:paddingLeft="10dp"
            android:text="@string/aboutfra_text_company" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="0dp">

        <ImageView
            android:id="@+id/help2"
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:src="@drawable/zz_w3"
            android:visibility="gone" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/aboutfra_text_softname" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout4"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="0dp">

        <ImageView
            android:id="@+id/btnLeftDown"
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/zz_w1"
            android:visibility="gone" />

        <TextView
            android:id="@+id/help3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/aboutfra_text_vision" />

    </LinearLayout>
</RelativeLayout>
